--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^1.1.2",
+    "@tanstack/react-query": "^5.90.10",
     "lunar-typescript": "^1.8.6",
     "next": "16.0.3",
     "openai": "^6.9.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "satori": "^0.18.3"
+    "satori": "^0.18.3",
+    "viem": "^2.39.3",
+    "wagmi": "^3.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
