--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "satori": "^0.18.3",
-    "viem": "^2.39.3",
-    "wagmi": "^3.0.1"
+    "viem": "2.x",
+    "wagmi": "^2.16.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
